KubernetesTraining/module_04_01/shipy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shipy-webapp
  namespace: shipy
spec:
  selector:
    app: shipy-webapp
  ports:
    - protocol: TCP
      port: 7000
      targetPort: 7000
