KubernetesTraining/module_04_01/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shipy-ingress
  namespace: shipy
  annotations:
   # kubernetes.io/ingress.class: "nginx" old method
spec:
  #New method
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: shipy-webapp
            port:
              number: 7000
